<package format="3">
  <name>movement_controller</name>
  <version>0.0.1</version>
  <description>Automatic robot movement node</description>

  <maintainer email="robot@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
