<?xml version="1.0"?>
<package format="3">
  <name>obstacle_detector</name>
  <version>0.0.1</version>
  <description>Front obstacle detector for LIDAR</description>

  <maintainer email="test@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

